2006-05-14  Stipe Tolj  <stolj at kannel.org>
  * gw/bb_smscconn.c: fixing bug #341, causing not to obey 'sms-resend-retry'
    for messages that are temporary failing.
    Thanks to Martin Conte <reflejo@gmail.com> for provided patch.
    [Msg-Id: <92cf04420605130116h7ea562aew7c2ec7ded92dfb1e@mail.gmail.com>]

2006-05-11  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_at.c: Added sanity check on digits before calling the
    octstr_append_char. smsc_at does not check the digits of the address
    field in the function at2_format_address_field. So, if the recipient's
    address contains a non-numeric string (e.g. 'Info Service'), and that's
    quite possible, the octstr assertion crashes the bearerbox during
    octstr_append_char.
    Thanks to Andrija Petrovic <andrija.petrovic at software888.com> for
    provided patch.

2006-05-11  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c:
    - Returning HTTP_OK status code 200 when receiving an MO from clickatell
    - Returning HTTP_BAD_REQUEST status code 400 is sent when "Insufficient 
      arguments, rejected"
    - fixed compiler warnings about unused variables
    - changed info to debug about "received mo"
    Thanks to Vincent CHAVANIS <vincent at telemaque.fr> for patch.

2006-05-09  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: applied patch which resolved a number of memory leaks and
    potential segmentation faults in the smsbox_req_handle.
    Thanks to Peter Christensen <pch at coolsystems.dk> for provided patch.
    [Msg-Id: <445DFAFC.6030807@coolsystems.dk>]

2006-05-09  Alexander Malysh <amalysh at kannel.org>
  * doc/userguide/userguide.xml,gw/smsc/smsc_smpp.c,gwlib/cfg.def: added new
    SMPP config options 'bind-addr-ton' and 'bind-addr-npi' in order to be able
    to define bind settings that some SMSCs require.

2006-05-09  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: make sure we do NOT link in object files from the progs itself,