@@ -30,4 +30,4 @@ D/wmlscript////
 /install-sh/1.2/Sun Dec 18 19:54:08 2005//
 /missing/1.1/Sun Dec 18 19:54:07 2005//
 /mkinstalldirs/1.1/Sun Dec 18 19:54:06 2005//
-/ChangeLog/1.2781/Mon May 15 12:15:48 2006//
+/ChangeLog/1.2782/Mon May 15 18:24:26 2006//
