@@ -1,5 +1,5 @@
 D/images////
 /.cvsignore/1.4/Sun Dec 18 19:54:04 2005//
 /sms-gateway.fig/1.1/Sun Dec 18 19:54:04 2005//
-/userguide.xml/1.315/Wed May 10 12:17:16 2006//
 /wap-gateway.fig/1.2/Sun Dec 18 19:54:04 2005//
+/userguide.xml/1.316/Mon May 15 18:15:42 2006//
