@@ -45,7 +45,6 @@ D/smsc////
 /shared.h/1.19/Wed May 10 12:17:18 2006//
 /sms.c/1.21/Sun Dec 18 19:54:08 2005//
 /sms.h/1.15/Sun Dec 18 19:54:08 2005//
-/smsbox.c/1.265/Wed May 10 12:17:18 2006//
 /smscconn.c/1.55/Wed May 10 12:17:17 2006//
 /smscconn.h/1.17/Sun Dec 18 19:54:07 2005//
 /smscconn_p.h/1.49/Wed May 10 12:17:16 2006//
@@ -85,3 +84,4 @@ D/smsc////
 /xml_shared.c/1.13/Sun Dec 18 19:56:21 2005//
 /xml_shared.h/1.9/Sun Dec 18 19:56:21 2005//
 /bb_smscconn.c/1.88/Mon May 15 12:15:48 2006//
+/smsbox.c/1.266/Mon May 15 18:15:42 2006//
