@@ -22,9 +22,9 @@
 /smsc_sema.c/1.7/Sun Dec 18 19:54:08 2005//
 /smsc_sema.h/1.5/Sun Dec 18 19:54:08 2005//
 /smsc_smasi.c/1.23/Wed May 10 12:17:18 2006//
-/smsc_smpp.c/1.91/Wed May 10 12:17:18 2006//
 /smsc_soap.c/1.16/Sun Dec 18 19:54:08 2005//
 /smsc_wrapper.c/1.8/Sun Dec 18 19:54:08 2005//
 /smsc_http.c/1.49/Thu May 11 14:15:37 2006//
 /smsc_at.c/1.30/Thu May 11 14:36:36 2006//
+/smsc_smpp.c/1.92/Mon May 15 18:15:42 2006//
 D
